--- a/project.ipynb
+++ b/project.ipynb
@@ -1691,79 +1691,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "headed-privacy",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Stamen",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/xyzservices/lib.py:45\u001b[0m, in \u001b[0;36mBunch.__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Stamen'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipyleaflet\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Map, basemaps\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Map centered on (60 degrees latitude and -2.2 degrees longitude)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Latitude, longitude\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mmap\u001b[39m \u001b[38;5;241m=\u001b[39m Map(center \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m60\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2.2\u001b[39m), zoom \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m, min_zoom \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m, max_zoom \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m, \n\u001b[0;32m----> 6\u001b[0m     basemap\u001b[38;5;241m=\u001b[39m\u001b[43mbasemaps\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mStamen\u001b[49m\u001b[38;5;241m.\u001b[39mTerrain)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mmap\u001b[39m\n",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/xyzservices/lib.py:47\u001b[0m, in \u001b[0;36mBunch.__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(key)\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m---> 47\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Stamen"
-     ]
-    }
-   ],
-   "source": [
-    "from ipyleaflet import Map, basemaps\n",
-    "\n",
-    "# Map centered on (60 degrees latitude and -2.2 degrees longitude)\n",
-    "# Latitude, longitude\n",
-    "map = Map(center = (60, -2.2), zoom = 2, min_zoom = 1, max_zoom = 20, \n",
-    "    basemap=basemaps.Stamen.Terrain)\n",
-    "map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "present-mistress",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1249224491.py, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[40], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    import Map basemaps\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m data_frame \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124massets/real_estate.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# Define the south belt populations\u001b[39;00m\n\u001b[1;32m      7\u001b[0m south_belt_populations \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFuenlabrada\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLeganés\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGetafe\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlcorcón\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
    "source": [
-    "import Map basemaps\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as plt\n",
     "\n",
-    "# Load the dataset\n",
+    "\n",
     "data_frame = pd.read_csv('assets/real_estate.csv', sep=';')\n",
     "\n",
-    "# Define the list of populations for the \"south belt\" of Madrid\n",
+    "    # Define the south belt populations\n",
     "south_belt_populations = [\"Fuenlabrada\", \"Leganés\", \"Getafe\", \"Alcorcón\"]\n",
-    "\n",
-    "# Filter the DataFrame to include only the specified populations\n",
+    "    \n",
+    "    # Filter the dataset for the south belt populations\n",
     "south_belt_df = data_frame[data_frame['level5'].isin(south_belt_populations)]\n",
-    "\n",
-    "map = Map(center = (60, -2.2), zoom = 2, min_zoom = 1, max_zoom = 20, \n",
-    "    basemap=basemaps.Stamen.Terrain)\n",
-    "map\n",
-    "# Create a colormap based on the 'level5' column (population)\n",
-    "colormap = plt.cm.get_cmap('tab20')\n",
-    "\n",
-    "\n",
-    "# Add a title and labels\n",
-    "plt.title('South Belt of Madrid: Population Distribution')\n",
-    "plt.xlabel('Longitude')\n",
-    "plt.ylabel('Latitude')\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "    \n",
+    "    # Extract latitude, longitude, and population data\n",
+    "coordinates = south_belt_df[['level5', 'latitude', 'longitude']].dropna()\n",
+    "    \n",
+    "    # Transform the coordinates into a dictionary\n",
+    "coordinates_dict = coordinates.to_dict('records')\n",
+    "    \n",
+    "    # Create a scatter plot for the south belt populations\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "    \n",
+    "for population in south_belt_populations:\n",
+    "        pop_data = coordinates[coordinates['level5'] == population]\n",
+    "        plt.scatter(pop_data['longitude'], pop_data['latitude'], label=population, alpha=0.7)\n",
+    "    \n",
+    "    # Adding plot details\n",
+    "plt.title(\"Coordinates of South Belt Populations in Madrid\")\n",
+    "plt.xlabel(\"longitude\")\n",
+    "plt.ylabel(\"latitude\")\n",
+    "plt.legend(title=\"Population\")\n",
+    "plt.grid(alpha=0.3)\n",
+    "plt.show()\n",
+    "    \n",
+    "    "
    ]
   }
  ],
